--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,10 +1,14 @@
 .footer{
   display: flex;
+  width: 1519px;
+  height: 34px;
+  left: 0px;
+  top: 990px;
   align-items: center;
   justify-content: center;
-  width: auto;
-height: 34px;
-background: #EEEEEE;
+  background: #EEEEEE;
+bottom: 0;
+position: absolute;
 }
 
 .footerSpan{
