--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -1,4 +1,6 @@
-
+.cardList{
+  margin-left: 47px ;
+ }
 
 .header{
     align-items: center;
@@ -8,36 +10,44 @@
     margin-bottom: 70px;
 }
 
+.modal{
+position: absolute;
+width: 486px;
+height: 1024px;
+right: 0;
+top: 0px;
+background: #0F52BA;
+box-shadow: -5px 0px 6px rgba(0, 0, 0, 0.13);
+}
 
 .title{
+  width: 180px;
+  height: 56px;
+  top: 36px;
+  left: 1001px;
   font-family: 'Montserrat';
 font-style: normal;
 font-weight: 700;
 font-size: 27px;
 line-height: 33px;
 color: #FFFFFF;
+margin-top: 36px;
+margin-left: 47px;
 }
 
 .icon{
   width: 38px;
   height: 38px;
+  top: 39px;
+  left: 1380px;
   background-color: #000000;
   border: none;
   border-radius: 50px;
   color: #fff;
+  margin-right: 22px;
+  margin-top: 39px;
 }
 
-.buttonFinalize{
- width: 400px;
-  height: 97px;
-  background-color: #000000;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 700;
-font-size: 28px;
-line-height: 15px;
-color: #FFFFFF;
-}
 
 
 .value{
@@ -51,9 +61,67 @@ color: #FFFFFF;
   display: flex;
   margin-bottom: 2rem;
   margin-top: 2rem;
+  margin-left: 47px ;
+  width: 92px;
+height: 15px;
+top: 870px;
+left: 1285px;
+padding-right: 63px;
+margin-left: 47px ;
 
 }
 
 .footer{
-  margin-top: 230px;
+ position: fixed;
+ bottom: 0;
 }
+
+.subTotal{
+align-items: center;
+justify-content: space-between;
+display: flex;
+margin-left: 47px ;
+
+}
+
+.total{
+  width: 80px;
+  height: 15px;
+  top: 870px;
+  left: 1001px;
+  font-family: 'Montserrat';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 15px;
+color: #FFFFFF;
+}
+
+
+
+.buttonFinalize{
+
+  width: 486px;
+height: 97px;
+left: -47px;
+top: 771px;
+background: #000000;
+ font-family: 'Montserrat';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 28px;
+
+ color: #FFFFFF;
+ }
+
+
+ .textEmpty{
+  font-family: 'Montserrat';
+ font-style: normal;
+ font-weight: 700;
+ line-height: 15px;
+  color: #FFFFFF;
+  margin-left: 10px;
+  font-weight: bold;
+ }
+
