--- a/src/components/ProductCard/styles.module.scss
+++ b/src/components/ProductCard/styles.module.scss
@@ -2,13 +2,14 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding:  0.2em;
+  padding-left:  0.2em;
+  padding-right:  0.2em;
   margin-bottom: 2em;
-  width: 217px;
+  width: 217.56px;
   height: 285px;
-  background-color: #FFFFFF;
-  border-radius: 1em;
-  box-shadow: 5px 5px 10px rgba(0,0,0, 0.5);
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.135216);
+  border-radius: 8px;
   display: flex;
 }
 
@@ -25,29 +26,32 @@ padding: 1rem;
 
 .cardNamePrice{
   align-items: center;
-align-items: center;
   justify-content: space-between;
   display: flex;
-  
+
 }
 
 .cardName{
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-color: #2C2C2C;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #2C2C2C;
 padding-top: 14px;
 padding-left: 14px;
 }
 
 .cardDescription{
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 300;
-font-size: 10px;
-color: #2C2C2C;
-padding: 14px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 12px;
+  color: #2C2C2C;
+  padding-left: 14px;
+  padding-bottom: 12px;
+  padding-top: 8px;
 
 }
 
@@ -62,6 +66,8 @@ font-size: 15px;
 line-height: 15px;
 color: #FFFFFF;
 
+
+
 }
 
 
@@ -69,22 +75,16 @@ color: #FFFFFF;
 background: #0F52BA;
 border-radius: 0px 0px 8px 8px;
 width: 225px;
-height: 35px;
+height: 31.91px;
 font-family: 'Montserrat';
 font-style: normal;
 font-weight: 600;
 font-size: 14px;
+line-height: 18px;
 color: #FFFFFF;
 border: none;
 }
 
-.cardIconButton{
-  padding: 10px;
-  justify-content: center;
-  padding: 5px;
-  color: #FFFFFF;
-  
-}
 
 .card .cardButton:hover{
   background-color: #1766dd;
